# cts

./: .gitignore  LOD.md  README.md  USERSTORIES_CITE.md  docker-compose.yml
coptic/: .environment  .travis.yml  Dockerfile  Gulpfile.js  LICENSE  README.json  README.md  README_Docker.md  addcorpora.sh  bower.json  compare_prod_to_stage.py  config.rb  karma.conf.js  manage.py  nav.py  package.json  pyproject.toml  requirements.txt  requirements_django_2.txt  requirements_django_4.txt  requirements_django_5.txt  sqlite3.db
coptic/annis/: admin.py  models.py
coptic/api/: encoder.py  json.py  tests.py  urls.py  views.py
coptic/client/: app.js  filters.js  routes.js  site.js
coptic/coptic/: __init__.py  celery.py  tests.py  urls.py  views.py  wsgi.py
coptic/gh_ingest/: corpus_scraper.py  corpus_transaction.py  htmlvis.hy  htmlvis.py  ingest.py  name_mapping.tab  repository.py  scraper.py  scraper.sync-conflict-20190827-113312-BCXA4EE.py  scraper_exceptions.py  test_generate_visualisation.py  test_htmlvis.py  test_scraper.py
coptic/ingest/: admin.py  expire.py  ingest.py  metadata.py  models.py  search.py  tasks.py  vis.py  visualizations.py
coptic/scss/: _global.scss  _index.scss  _responsive.scss  _single.scss  _text.scss  base.scss
coptic/templates/: 404.html  base.html  corpus.html  faceted_search.html  footer.html  header.html  home.html  index.html  nav.html  preferences.html  project-desc.html  search.html  text.html  vizbar.html
coptic/texts/: admin.py  ft_search.py  models.py  probe_github.py  search_fields.py  test_ft_search.py  test_urn.py  tests.py  (+3 more)
(+164 files in other folders)
